# ChangeLog for games-engines/freesci
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-engines/freesci/ChangeLog,v 1.2 2003/09/10 15:52:28 vapier Exp $

*freescsi-0.4.3a (12 May 2003)

  13 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Added a lot of optional support and fixed XFT bug #24398.

  12 May 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump.

*freesci-0.3.4a (12 May 2003)

  29 Jun 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*freesci-0.3.3 (18 Jul 2002)

  11 May 2003; Martin Holzer <mholzer@gentoo.org> freesci-0.3.3.ebuild:
  Updated SRC_URI.

  27 Jul 2002; Stuart Bouyer <stubear@gentoo.org> freesci-0.3.3.ebuild :
  Added LICENSE, SLOT, and KEYWORDS="x86" for QA happiness.

  18 Jul 2002; Daniel Robbins <drobbins@gentoo.org>: Added missing ChangeLog