@@ -1,4 +1,6 @@
-MD5 290bf532db2202922d80e93a569c6041 ChangeLog 884
+MD5 92cd732dde79af8a74639b206c7b3f47 ChangeLog 1023
 MD5 dd3a340d069b05bc2ae126045a3049f2 freesci-0.3.4a.ebuild 1146
-MD5 a30c9d4ce8f9629d6d7323eaab258343 metadata.xml 241
+MD5 015ec1b20be1eacd074a92e56710eca3 freesci-0.6.1.ebuild 1253
+MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
+MD5 8bae9ce8600f7a35523b7a76e2cb08a7 files/digest-freesci-0.6.1 66
 MD5 f4396d74a3074af057c248aa3785e894 files/digest-freesci-0.3.4a 67
