@@ -1,6 +1,11 @@
 # ChangeLog for games-engines/freesci
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-engines/freesci/ChangeLog,v 1.2 2003/09/10 15:52:28 vapier Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-engines/freesci/ChangeLog,v 1.3 2004/03/31 07:33:46 mr_bones_ Exp $
+
+*freesci-0.6.1 (30 Mar 2004)
+
+  30 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> freesci-0.6.1.ebuild:
+  version bump (bug #46086)
 
 *freescsi-0.4.3a (12 May 2003)
 
